fix: remove unncessary ul padding-left causing off-centering of the footer content

--- a/_includes/styles.css
+++ b/_includes/styles.css
@@ -82,6 +82,7 @@ a {
 .footer-nav-links {
   display: flex;
   justify-content: center;
+  padding: 0;
 }
 
 .footer-nav-links > * + *::before {
